--- a/package.json
+++ b/package.json
@@ -3,27 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@apollo/client": "^3.1.4",
+    "@apollo/react-hooks": "^3.1.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@types/react": "^16.9.49",
+    "apollo-boost": "^0.4.9",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
+    "graphql": "^14.7.0",
     "graphql-request": "^2.0.0",
+    "graphql-tag": "^2.11.0",
     "jquery": "^3.5.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "3.4.3",
     "react-slidedown": "^2.4.5",
-    "reactstrap": "^8.5.0"
+    "react-toastify": "^6.0.8",
+    "reactstrap": "^8.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,6 +49,6 @@
   "devDependencies": {
     "eslint": "^6.0.0",
     "eslint-config-amex": "12.0.3",
-    "eslint-plugin-react-hooks": "^4.0.4"
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
