--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loading-skeleton": "^2.1.1",
     "react-scripts": "3.4.3",
     "react-slidedown": "^2.4.5",
     "react-toastify": "^6.0.8",
