--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.49",
     "apollo-boost": "^0.4.9",
     "axios": "^0.19.2",
+    "axios-cache-adapter": "^2.5.0",
     "bootstrap": "^4.5.2",
     "graphql": "^14.7.0",
     "graphql-tag": "^2.11.0",
