--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm i && cd apps/onboarding-jobtype-config && npm i && npm run build",
+    "serve": "node index.js"
   },
   "repository": {
     "type": "git",
