--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm i && cd apps/onboarding-jobtype-config && npm i && npm run build",
+    "build": "npm i && cd apps/onboarding-jobtype-config && npm i && npm run build && cd ../langpack-editor && npm run build",
     "serve": "node index.js"
   },
   "repository": {
@@ -14,9 +14,9 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/iwgb/iwgb-onboarding-jobtype-config/issues"
+    "url": "https://github.com/iwgb/iwgb-admin/issues"
   },
-  "homepage": "https://github.com/iwgb/iwgb-onboarding-jobtype-config#readme",
+  "homepage": "https://github.com/iwgb/iwgb-admin#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
