--- a/apps/langpack-editor/package.json
+++ b/apps/langpack-editor/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@rooks/use-previous": "^3.6.0",
     "@types/react": "^16.9.49",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
